--- a/src/app/forum/forum-sub-category-add-edit/forum-sub-category-add-edit.component.html
+++ b/src/app/forum/forum-sub-category-add-edit/forum-sub-category-add-edit.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-  <bio-loading></bio-loading>
+  <bio-loading />
 }
 <form [controlGroup]="form" (groupSubmit)="save()">
   <h4 bioModalTitle>{{ idSubCategory ? 'Edit' : 'Add' }} Sub category</h4>
