--- a/src/app/notification/notifications-icon/notifications-icon.component.html
+++ b/src/app/notification/notifications-icon/notifications-icon.component.html
@@ -25,8 +25,7 @@
     cdkConnectedOverlayHasBackdrop
     (backdropClick)="overlayIsOpen = !overlayIsOpen"
   >
-    <bio-notifications
-      [(notifications)]="notifications"
+    <bio-notifications [(notifications)]="notifications"
       [page]="page"
       (pageChange)="pageChange($event)"
       [meta]="meta"
@@ -35,6 +34,6 @@
       (closeOverlay)="overlayIsOpen = false"
       @fadeInOut
       @scaleIn
-    ></bio-notifications>
+     />
   </ng-template>
 </ng-container>
