--- a/src/app/shared/components/list/list-item.component.html
+++ b/src/app/shared/components/list/list-item.component.html
@@ -12,8 +12,8 @@
     tabindex="-1"
     />
 }
-<ng-content select="[bioPrefix]"></ng-content>
+<ng-content select="[bioPrefix]" />
 <div class="list-item-content">
   <ng-content></ng-content>
 </div>
-<ng-content select="[bioSuffix]"></ng-content>
+<ng-content select="[bioSuffix]" />
