--- a/src/app/admin/admin-errors/admin-errors.component.html
+++ b/src/app/admin/admin-errors/admin-errors.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-  <bio-loading></bio-loading>
+  <bio-loading />
 }
 <h4 bioPageTitle></h4>
 <bio-accordion>
@@ -42,9 +42,8 @@
     </bio-accordion-item>
   }
 </bio-accordion>
-<bio-pagination
-  [meta]="meta"
+<bio-pagination [meta]="meta"
   setQueryParamsOnChange
   (itemsPerPageChange)="onItemsPerPage($event)"
   (currentPageChange)="onCurrentPageChange($event)"
-></bio-pagination>
+ />
