--- a/src/app/forum/forum-sub-category-moderator-management/forum-sub-category-moderator-management.component.html
+++ b/src/app/forum/forum-sub-category-moderator-management/forum-sub-category-moderator-management.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-  <bio-loading></bio-loading>
+  <bio-loading />
 }
 <h4 bioModalTitle>{{ nameSubCategory }} - Manage moderators</h4>
 <bio-modal-content>
