--- a/src/app/forum/forum-topic-transfer/forum-topic-transfer.component.html
+++ b/src/app/forum/forum-topic-transfer/forum-topic-transfer.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-  <bio-loading></bio-loading>
+  <bio-loading />
 }
 <h4 bioModalTitle>Transfer topic</h4>
 <bio-modal-content bioList [(model)]="idSubCategoryTo">
