--- a/src/app/player/player-shared/player-search-modal/player-search-modal.component.html
+++ b/src/app/player/player-shared/player-search-modal/player-search-modal.component.html
@@ -16,7 +16,7 @@
       }
       <bio-list [model]="idPlayer">
         @if (loading) {
-          <bio-loading></bio-loading>
+          <bio-loading />
         }
         @for (player of state.players; track trackByPlayer($index, player)) {
           <bio-list-item
@@ -30,12 +30,10 @@
     </bio-modal-content>
   }
   <bio-modal-actions>
-    <bio-pagination
-      [meta]="paginationMeta$ | async"
+    <bio-pagination [meta]="paginationMeta$ | async"
       (itemsPerPageChange)="onItemsPerPageChange($event)"
       (currentPageChange)="onCurrentPageChange($event)"
-      >
-    </bio-pagination>
+       />
     <button bioButton type="button" bioModalClose>Close</button>
   </bio-modal-actions>
 </ng-container>
