--- a/src/app/score/score-info/score-info-modal/score-info-modal.component.html
+++ b/src/app/score/score-info/score-info-modal/score-info-modal.component.html
@@ -1,9 +1,8 @@
 <bio-modal-content>
-  <bio-score-info
-    [score]="score"
+  <bio-score-info [score]="score"
     [showWorldRecord]="showWorldRecord"
     [showApprovalDate]="showApprovalDate"
-  ></bio-score-info>
+   />
 </bio-modal-content>
 <bio-modal-actions end>
   <button bioButton type="button" (click)="modalRef.close()">Close</button>
