--- a/src/app/score/score-leaderboards/score-leaderboards.component.html
+++ b/src/app/score/score-leaderboards/score-leaderboards.component.html
@@ -2,12 +2,11 @@
 <bio-card>
   <h3 bioCardTitle>Parameters</h3>
   <bio-card-content>
-    <bio-params
-      [params]="form.valueChanges$ | async"
+    <bio-params [params]="form.valueChanges$ | async"
       (paramsChange)="paramsChange($event)"
       [config]="paramsConfig"
       setQueryParamsOnChange
-    ></bio-params>
+     />
   </bio-card-content>
 </bio-card>
 <bio-card *ngLet="tableLoading$ | async as tableLoading" [bioLoading]="tableLoading" class="top-table flex-table">
@@ -80,13 +79,12 @@
   </bio-card-content>
   <bio-card-actions end>
     @if (paginationMeta$ | async; as paginationMeta) {
-      <bio-pagination
-        [meta]="paginationMeta"
+      <bio-pagination [meta]="paginationMeta"
         (currentPageChange)="changePage($event)"
         (itemsPerPageChange)="changeItemsPerPage($event)"
         [itemsPerPageOptions]="itemsPerPageOptions"
         setQueryParamsOnChange
-      ></bio-pagination>
+       />
     }
   </bio-card-actions>
 </bio-card>
