--- a/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
@@ -1,6 +1,5 @@
 @if (isSmall$ | async) {
-  <bio-score-list
-    [scores]="scores()"
+  <bio-score-list [scores]="scores()"
     [loading]="loading()"
     [itemsPerPageOptions]="itemsPerPageOptions()"
     [paginationMeta]="paginationMeta()"
@@ -10,10 +9,9 @@
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (scoreClicked)="scoreClicked.emit($event)"
-  ></bio-score-list>
+   />
 } @else {
-  <bio-table
-    [title]="title()"
+  <bio-table [title]="title()"
     [colDefs]="colDefs()"
     [order]="order()"
     [colDefDefault]="colDefDefault()"
@@ -27,6 +25,5 @@
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (orderChange)="orderChange.emit($event)"
     (notifyChange)="notifyChange.emit($event)"
-    >
-  </bio-table>
+     />
 }
