--- a/src/app/shared/components/form/form-field.component.html
+++ b/src/app/shared/components/form/form-field.component.html
@@ -1,5 +1,5 @@
 @if (labelDirective()) {
-  <ng-content select="label"></ng-content>
+  <ng-content select="label" />
 } @else {
   @if (label()) {
     <label
