--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-  <bio-loading></bio-loading>
+  <bio-loading />
 }
 @if (data.title) {
   <h5 bioModalTitle>
@@ -18,7 +18,7 @@
     {{ data.title }}
   </h5>
 }
-<bio-modal-content [innerHTML]="data.content"></bio-modal-content>
+<bio-modal-content [innerHTML]="data.content" />
 @if (buttons.length) {
   <bio-modal-actions end>
     @for (button of buttons; track trackById($index, button)) {
