trying to fix breaking changes (v2)

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -6,7 +6,7 @@
     (@fadeInOut.done)="onFadeDone($event)"
     class="menu"
     (mouseleave)="onMouseleave()"
-    (keydown)="focusManager?.onKeydown($event)"
+    (keydown)="onKeydown($event)"
   >
     <ng-content></ng-content>
   </div>
